--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.2",
     "@tsconfig/svelte": "^5.0.4",
-    "svelte": "^4.2.19",
-    "svelte-check": "^3.8.6",
-    "tslib": "^2.7.0",
-    "typescript": "^5.5.3",
-    "vite": "^5.4.2",
     "autoprefixer": "^10.4.18",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.8.6",
+    "tailwindcss": "^3.4.1",
+    "tslib": "^2.7.0",
+    "typescript": "^5.5.3",
+    "vite": "^5.4.2"
   },
   "dependencies": {
-    "date-fns": "^3.3.1"
+    "date-fns": "^4.1.0"
   }
 }
